fix partially hidden dropdowns on mobile & code refactoring

--- a/frontend/src/sass/dropdown.scss
+++ b/frontend/src/sass/dropdown.scss
@@ -137,7 +137,7 @@
     }
     
     @media (max-width: 600px) {
-      padding: 0.675em 0.5em 0.675em 0.5em;
+      // padding: 0.675em 0.5em 0.675em 0.5em;
     }
   }
 
